* Search request intercepted in prepare_recherche.php * Indexation now index "articles" and "breves" * Indexation have now with correct id but for the moment it's not site relative * Indexation adress is fixed for the moment to localhost:8080/oss and index to spip_index

--- a/src/php/contrib/cms/spip/plugin.xml
+++ b/src/php/contrib/cms/spip/plugin.xml
@@ -12,6 +12,7 @@
     
     <fonctions>inc/OSS_API.class.php</fonctions>
     <fonctions>inc/OSS_IndexDocument.class.php</fonctions>
+    <fonctions>inc/prepare_recherche.php</fonctions>
     
     <options>oss_options.php</options>
     
