* SPIP OSS Plugin: Information page is now working fully. It show the document counts (by type), engine status and index status. More information will added on this page when the required APIs will be published * OSS_API::getEngineInformations() Added. To be completed once API call is implemented. * OSS_API::getIndexInformations() Added. To be completed once API call is implemented. * OSS_API::isEngineRunning() Added. * OSS_API::isIndexAvailable() Added. * OSS_API::search() marked as deprecated. Using OSS_API::select(). * Some inline documentation

--- a/src/php/contrib/cms/spip/plugin.xml
+++ b/src/php/contrib/cms/spip/plugin.xml
@@ -23,6 +23,11 @@
     	<inclure>base/indexation.php</inclure>
     </pipeline>
     
+    <pipeline>
+    	<nom>header_prive</nom>
+    	<inclure>inc/oss.php</inclure>
+    </pipeline>
+    
 	<bouton id="oss_info" parent="configuration">
 		<icone>images/icon_oss.png</icone>
 		<titre>oss:gestion_indexation</titre>
