--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--   
 	License Agreement for Jaeksoft Open Search Server
 	
-	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
 	
 	http://www.open-search-server.com
 	
@@ -191,6 +191,11 @@
 
 	<target name="javadoc">
 		<javadoc sourcepath="${src}" destdir="${build-doc}/javadoc" />
+	</target>
+
+	<target name="dist-src">
+		<mkdir dir="${dist}" />
+		<tar compression="gzip" destfile="${dist}/${product}.src.tar.gz" basedir="." excludes="temp/**, dist/**, ant-build/**, build/**" />
 	</target>
 
 	<target name="clean" description="clean up">
