--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
 	<property name="product" value="open-search-server" />
 	<property name="name-release" value="${product}" />
 	<property name="name-debug" value="${product}-debug" />
-	<property name="tomcat-name" value="apache-tomcat-6.0.29" />
+	<property name="tomcat-name" value="apache-tomcat-6.0.32" />
 	<property name="tomcat-zip" location="pkg/${tomcat-name}.zip" />
 	<property name="tomcat-config" location="pkg/tomcat_config" />
 	<property name="shell-dir" location="pkg/shell" />
@@ -136,6 +136,11 @@
 		<!-- Copy examples -->
 		<copy todir="${dist}/${product}/examples">
 			<fileset dir="${examples}" />
+		</copy>
+
+		<!-- Copy lib -->
+		<copy todir="${dist}/${product}/${tomcat-name}/lib">
+			<fileset file="${lib}/jcifs-1.3.15.jar" />
 		</copy>
 
 		<!-- Copy PHP source -->
