--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	<!--
-		License Agreement for Jaeksoft OpenSearchServer Copyright (C)
-		2008-2009 Emmanuel Keller / Jaeksoft http://www.open-search-server.com
-		This file is part of Jaeksoft OpenSearchServer. Jaeksoft
-		OpenSearchServer is free software: you can redistribute it and/or
-		modify it under the terms of the GNU General Public License as
-		published by the Free Software Foundation, either version 3 of the
-		License, or (at your option) any later version. Jaeksoft
-		OpenSearchServer is distributed in the hope that it will be useful,
-		but WITHOUT ANY WARRANTY; without even the implied warranty of
-		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-		General Public License for more details. You should have received a
-		copy of the GNU General Public License along with Jaeksoft
-		OpenSearchServer. If not, see <http://www.gnu.org/licenses/>.
-	-->
+<!-- License Agreement for Jaeksoft OpenSearchServer Copyright (C) 2008-2009 
+	Emmanuel Keller / Jaeksoft http://www.open-search-server.com This file is 
+	part of Jaeksoft OpenSearchServer. Jaeksoft OpenSearchServer is free software: 
+	you can redistribute it and/or modify it under the terms of the GNU General 
+	Public License as published by the Free Software Foundation, either version 
+	3 of the License, or (at your option) any later version. Jaeksoft OpenSearchServer 
+	is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
+	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+	PURPOSE. See the GNU General Public License for more details. You should 
+	have received a copy of the GNU General Public License along with Jaeksoft 
+	OpenSearchServer. If not, see <http://www.gnu.org/licenses/>. -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
@@ -120,6 +116,10 @@
 		<servlet-name>Report</servlet-name>
 		<servlet-class>com.jaeksoft.searchlib.web.ReportServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Screenshot</servlet-name>
+		<servlet-class>com.jaeksoft.searchlib.web.ScreenshotServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>Basket</servlet-name>
@@ -179,11 +179,15 @@
 		<servlet-name>Report</servlet-name>
 		<url-pattern>/report</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Screenshot</servlet-name>
+		<url-pattern>/screenshot</url-pattern>
+	</servlet-mapping>
 	<listener>
 		<listener-class>com.jaeksoft.searchlib.web.StartStopListener</listener-class>
 	</listener>
 
-	<!--  XML RPC -->
+	<!-- XML RPC -->
 	<servlet>
 		<servlet-name>XmlRpcServlet</servlet-name>
 		<servlet-class>org.apache.xmlrpc.webserver.XmlRpcServlet</servlet-class>
