--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -120,6 +120,10 @@
 		<servlet-name>Screenshot</servlet-name>
 		<servlet-class>com.jaeksoft.searchlib.web.ScreenshotServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Renderer</servlet-name>
+		<servlet-class>com.jaeksoft.searchlib.web.RendererServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>Basket</servlet-name>
@@ -182,6 +186,10 @@
 	<servlet-mapping>
 		<servlet-name>Screenshot</servlet-name>
 		<url-pattern>/screenshot</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Renderer</servlet-name>
+		<url-pattern>/renderer</url-pattern>
 	</servlet-mapping>
 	<listener>
 		<listener-class>com.jaeksoft.searchlib.web.StartStopListener</listener-class>
