--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
 	<property name="src" location="src/java" />
 	<property name="src.php" location="src/php" />
 	<property name="src.asp" location="src/asp" />
+	<property name="src.drupal-module" location="src/drupal-module" />
 	<property name="resources" location="src/resources" />
 	<property name="web" location="WebContent" />
 	<property name="lib" location="lib" />
@@ -152,6 +153,12 @@
 		<copy todir="${dist}/${product}/asp">
 			<fileset dir="${src.asp}" />
 		</copy>
+
+		<!-- Copy Drupal module source -->
+		<copy todir="${dist}/${product}/drupal-module">
+			<fileset dir="${src.drupal-module}" />
+		</copy>
+
 
 		<!-- Check executable file flag for batches -->
 		<chmod perm="ugo+x" type="file">
