--- a/build.xml
+++ b/build.xml
@@ -43,10 +43,11 @@
 	<property name="product" value="open-search-server" />
 	<property name="name-release" value="${product}" />
 	<property name="name-debug" value="${product}-debug" />
-	<property name="tomcat-name" value="apache-tomcat-6.0.33" />
+	<property name="tomcat-name" value="apache-tomcat-6.0.35" />
 	<property name="tomcat-zip" location="pkg/${tomcat-name}.zip" />
 	<property name="tomcat-config" location="pkg/tomcat_config" />
 	<property name="tomcat-bin" location="pkg/tomcat_bin" />
+	<property name="tomcat-lib" location="pkg/tomcat_lib" />
 	<property name="shell-dir" location="pkg/shell" />
 	<property name="examples" location="examples" />
 
@@ -54,6 +55,9 @@
 
 	<path id="project.class.path">
 		<fileset dir="${lib}">
+			<include name="**.jar" />
+		</fileset>
+		<fileset dir="${tomcat-lib}">
 			<include name="**.jar" />
 		</fileset>
 		<fileset dir="${wlib}">
@@ -146,7 +150,7 @@
 
 		<!-- Copy lib -->
 		<copy todir="${dist}/${product}/${tomcat-name}/lib">
-			<fileset file="${lib}/jcifs-1.3.16.jar" />
+			<fileset dir="${tomcat-lib}" />
 		</copy>
 
 		<!-- Copy PHP source -->
