--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--   
 	License Agreement for OpenSearchServer
 	
-	Copyright (C) 2008-2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	
 	http://www.open-search-server.com
 	
@@ -229,7 +229,7 @@
 	</target>
 
 	<target name="javadoc">
-		<javadoc sourcepath="${src}" destdir="${build-doc}/javadoc" />
+		<javadoc sourcepath="${src}" destdir="${build-doc}/javadoc" classpathref="project.class.path" />
 	</target>
 
 	<target name="clean" description="clean up">
