New URL normalizer

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -257,9 +257,9 @@
     	<param-name>contextConfigLocation</param-name>
     	<param-value>WEB-INF/beans.xml</param-value>
   </context-param>
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+<!--   <listener> -->
+<!--     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
+<!--   </listener> -->
   <servlet>
     <description>Apache CXF Endpoint</description>
     <display-name>cxf</display-name>
